--- a/common/theme.css
+++ b/common/theme.css
@@ -1,13 +1,12 @@
 :root {
-  --color-primary: #00D4C4;
-  --color-primary-light: #B9EEE3;
-  --color-secondary: #FF6871;
-  --color-accent: #00D4C4;
-  --color-neutral-beige: #B9EEE3;
-  --color-whatever: #BCF5A9;
-  --font-primary: font-family: "Archivo Black", sans-serif;
-  --font-secondary: font-family: "Playfair Display", serif;
-
+  --color-primary: #00d4c4;
+  --color-primary-light: #b9eee3;
+  --color-secondary: #ff6871;
+  --color-accent: #00d4c4;
+  --color-neutral-beige: #b9eee3;
+  --color-whatever: #bcf5a9;
+  --font-primary: "Archivo Black", sans-serif;
+  --font-secondary: "Playfair Display", serif;
 }
 
 html {
