This commit changes colour to beige

--- a/common/theme.css
+++ b/common/theme.css
@@ -3,7 +3,7 @@
   --color-primary-light: #b9eee3;
   --color-secondary: #ff6871;
   --color-accent: #00d4c4;
-  --color-neutral-beige: #b9eee3;
+  --color-neutral-beige: #fffff0;
   --color-whatever: #bcf5a9;
   --font-primary: "Archivo Black", sans-serif;
   --font-secondary: "Playfair Display", serif;
