--- a/common/theme.css
+++ b/common/theme.css
@@ -15,3 +15,65 @@
 html {
   font-family: var(--font-primary);
 }
+
+h1 {
+  font-size: 4em;
+}
+
+h2 {
+  font-size: 3.25em;
+}
+
+h3 {
+  font-size: 3em;
+  font-weight: normal;
+}
+
+h4 {
+  font-size: 2.5em;
+}
+
+h5 {
+  font-size: 2em;
+  font-weight: normal;
+}
+
+h6 {
+  font-size: 1.5em;
+}
+
+a {
+  color: var(--color-primary-dark)
+}
+
+ul li {
+  list-style-type: none;
+}
+
+ol li {
+  display: block;
+  list-style-type: bullets;
+}
+
+dl dt {
+  font-weight: bold;
+}
+
+dl dd {
+  margin-left: 1em;
+}
+
+blockquote,
+q {
+  font-style: italic;
+}
+
+cite {
+  font-weight: bold;
+  font-style: normal;
+}
+
+mark {
+  background-color: var(--color-primary-dark);
+  color: #fff;
+}
