--- a/patterns/buttons/buttons.css
+++ b/patterns/buttons/buttons.css
@@ -1,51 +1,55 @@
+/* btn 3d */
+
 .btn {
+  display: inline-block;
+  width: 5em;
+  height: 5em;
+  perspective: 800px;
+  background-color: transparent;
+  border: none;
+}
+
+.btn span {
+  display: inline-block;
+  position: relative;
+  width: 5em;
+  height: 5em;
+  transform-origin: 50% 50% -50%;
+  transform-style: preserve-3d;
+  transition: all .4s linear;
+}
+
+.btn span::before,
+.btn span::after,
+.btn span i {
+  content: attr(aria-label);
+  display: inline-flex;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
   background-color: var(--color-primary);
-  border-color: var(--color-accent);
-  border-width: 8px;
+  border: 8px solid black;
   border-radius: 8px;
-
-  color:#000;
-  width: 4em;
-  height: 4em;
-  padding: 0;
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
+  font-weight: bold;
+  transform-origin: 50% 50% -50%;
+  transform: translate3d(0, 0, 2.5em);
+  left: 0;
+  top: 0;
 }
 
-.btn-light {
-  background-color: var(--color-primary-light);
-  border-color: var(--color-accent);
-
-}
-
-.btn-ghost {
-  background-color: transparent;
-  border-color: var(--color-primary-dark);
-}
-
-.btn:hover {
+.btn span::after {
+  transform: rotateY(180deg) translate3d(0, 0, 2.5em);
   background-color: var(--color-secondary);
-  border-color: var(--color-accent);
-  border-width: 8px;
-  border-radius: 8px;
-
-  color:#000;
-  width: 4em;
-  height: 4em;
-  padding: 0;
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
 }
 
-.btn-light:hover {
-  background-color: var(--color-secondary-light);
-  border-color: var(--color-accent);
-
+.btn span i {
+  left: -6px;
+  transform: rotateY(90deg) translate3d(0, 0, 2.5em);
+  background-color: var(--color-primary-dark);
 }
 
-.btn-ghost:hover {
-  background-color: transparent;
-  border-color: var(--color-secondary-dark);
+.btn:hover span {
+  transform: rotateY(-180deg);
 }
