--- a/btn-opposite.css
+++ b/btn-opposite.css
@@ -1,4 +1,4 @@
- /* btn 3d */
+/* btn 3d */
 
 .btn {
   display: inline-block;
@@ -126,4 +126,97 @@
 
 .btn-save:hover span {
   transform: rotateX(180deg);
+}
+
+
+/* Original Code */
+
+/* btn 3d */
+
+.btn {
+  display: inline-block;
+  width: 5em;
+  height: 5em;
+  perspective: 800px;
+  background-color: transparent;
+  border: none;
+  color: rgba(0, 0, 0, 0);
+}
+
+.btn:hover {
+  background-color: transparent;
+  border: none;
+}
+
+.btn span {
+  display: inline-block;
+  position: relative;
+  width: 5em;
+  height: 5em;
+  transform-origin: 50% 50% -50%;
+  transform-style: preserve-3d;
+  transition: all .4s linear;
+  color: rgba(0, 0, 0, 0);
+}
+
+.btn span::before,
+.btn span::after,
+.btn span i {
+  content: attr(aria-label);
+  display: inline-flex;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--color-primary);
+  border: 8px solid black;
+  border-radius: 8px;
+  font-weight: bold;
+  transform-origin: 50% 50% -50%;
+  transform: translate3d(0, 0, 2.5em);
+  color: var(--color-secondary-light);
+  left: 0;
+  top: 0;
+}
+
+.btn span::after {
+  transform: rotateY(180deg) translate3d(0, 0, 2.5em);
+  background-color: var(--color-secondary);
+}
+
+.btn span i {
+  left: -6px;
+  transform: rotateY(90deg) translate3d(0, 0, 2.5em);
+  background-color: var(--color-primary-dark);
+}
+
+.btn-cart span i {
+  left: 6px;
+  transform: rotateY(-90deg) translate3d(0, 0, 2.5em);
+}
+
+.btn:hover span {
+  transform: rotateY(-180deg);
+}
+
+.btn-cart:hover span {
+  transform: rotateY(180deg);
+}
+
+.btn-cart span::before {
+  background-color: var(--color-secondary);
+}
+
+.btn-cart span::after {
+  background-color: var(--color-primary);
+}
+
+.btn-save span::before {
+  background-color: var(--color-primary-light);
+  color: var(--color-accent);
+}
+
+.btn-save span::after {
+  background-color: var(--color-neutral);
 }
