--- a/patterns/cards/cards.css
+++ b/patterns/cards/cards.css
@@ -39,3 +39,10 @@
   border: 4px solid var(--color-primary-light);
   border-radius: 8px;
 }
+
+.product-card {
+  color: var(--color-secondary);
+  border-bottom: 2px solid var(--color-primary);
+  background-color: #fff;
+  display: block;
+}
