This commit fixes cards sizing

--- a/patterns/cards/cards.css
+++ b/patterns/cards/cards.css
@@ -13,15 +13,6 @@
   filter: grayscale(1);
 }
 
-.product-card {
-  width: 25em;
-  border-right: 5em;
-  border: 1px solid #F5F5F5;
-  border-bottom-right-radius: 1px;
-  border-bottom-left-radius: 1px;
-  background-color: #F5F5F5;
-}
-
 .product-list dd {
   display: inline;
 }
@@ -41,8 +32,13 @@
 }
 
 .productcard {
-  color: var(--color-secondary);
+  color: var(--color-neutral-beige);
   background-color: var(--color-primary);
+  border-radius: 0.5em;
   display: block;
-  height: 5em;
+  width: 25em;
+}
+
+h3 {
+  color: var(--color-neutral-beige);
 }
