--- a/patterns/sections/sections.css
+++ b/patterns/sections/sections.css
@@ -35,3 +35,11 @@ nav a:hover {
   border-color: var(--color-whatever);
   color: var(--color-whatever);
 }
+
+.img-s {
+  width: 35px;
+}
+
+p {
+color: var(--color-primary);
+}
