--- a/patterns/buttons/buttons.css
+++ b/patterns/buttons/buttons.css
@@ -62,6 +62,7 @@
 .btn-cart span i {
   left: 6px;
   transform: rotateY(-90deg) translate3d(0, 0, 2.5em);
+  background-color: var(--color-secondary-dark);
 }
 
 .btn:hover span {
@@ -88,6 +89,7 @@
 .btn-save span::after {
   background-color: var(--color-neutral);
 }
+
 
 /* btn backwards*/
 
@@ -126,4 +128,43 @@
 
 .btn-save:hover span {
   transform: rotateX(180deg);
+}
+
+/* btn backwards-reverse*/
+
+.btn-save {
+  width: 5em;
+  height: 5em;
+  perspective: 800px;
+}
+
+.btn-drop span::before,
+.btn-drop span::after,
+.btn-drop span i {
+  content: attr(aria-label);
+  display: inline-flex;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  transform-origin: 50% 50%;
+  transform-style: preserve-3d;
+  color: var(--color-secondary-light);
+  background-color: var(--color-secondary-dark);
+  left: 0;
+  top: 0;
+}
+
+.btn-drop span::after {
+  transform: rotateX(-180deg) translate3d(0, 0, 2.5em);
+  background-color: var(--color-primary-dark);
+}
+
+.btn-drop span i {
+  top: 2px;
+  transform: rotateX(90deg) translate3d(0, 0, 2.5em);
+  background-color: var(--color-secondary-light);
+}
+
+.btn-drop:hover span {
+  transform: rotateX(-180deg);
 }
