--- a/patterns/header/header.css
+++ b/patterns/header/header.css
@@ -14,9 +14,9 @@ p{
 
 .banner {
   background-image: linear-gradient(to bottom, rgba(16, 52, 41, 0) 40%, rgba(16, 52, 41, .8)), url("../../images/leaf-bg.png");
-  background-size: cover;
+  min-height: 20em;
   background-repeat: no-repeat;
-  background-position: center;
+  background-size: cover;
 }
 
 @media only screen and (min-width: 60em) {
