--- a/patterns/cards/cards.css
+++ b/patterns/cards/cards.css
@@ -9,7 +9,7 @@
 }
 
 .image-container img:hover {
-  opacity: 0.8;
+  opacity: .8;
   filter: grayscale(1);
 }
 
@@ -25,6 +25,7 @@
 .product-list dt {
   width: 50%;
 }
+
 .card {
   color: var(--color-primary);
   border: 4px solid var(--color-primary-light);
@@ -34,7 +35,7 @@
 .productcard {
   color: var(--color-neutral-beige);
   background-color: var(--color-primary);
-  border-radius: 0.5em;
+  border-radius: .5em;
   display: block;
   width: 25em;
 }
