--- a/patterns/card/cards.css
+++ b/patterns/card/cards.css
@@ -69,7 +69,7 @@ h5 {
 
 h1,
 h2 {
-  line-height: 62px;
+  line-height: 72px;
   text-shadow: 1px 1px 1px var(--color-neutral);
 }
 
@@ -93,5 +93,28 @@ dl dd {
 .h3-separator {
   border-bottom: 4px solid var(--color-primary-dark);
   display: inline-block;
-  line-height: 62px;
+  line-height: 72px;
+}
+
+.rating.rating-box {
+  position: relative;
+}
+
+li.rating-box::after {
+  position: absolute;
+  content: " ";
+  bottom: 0;
+  border: 2px solid var(--color-accent);
+  border-radius: 2px;
+  width: 10px;
+  height: 10px;
+  display: inline-block;
+}
+
+li.rating-box:hover::after {
+  background-color: var(--color-primary-dark);
+}
+
+li.rated::after {
+  background-color: var(--color-primary-dark);
 }
