--- a/patterns/card/cards.css
+++ b/patterns/card/cards.css
@@ -13,6 +13,119 @@ a {
   box-shadow: 10px 10px 10px #e2e2e2;
 }
 
+/* -- ratings -- */
+input[type="radio"] ~ label {
+    display:inline-block;
+    width: 12px;
+    height: 12px;
+    border-radius: 3px;
+    border: 2px solid var(--color-accent);
+}
+
+#rating-one[type="radio"]:checked  ~ [for="rating-one"] {
+  background-color: var(--color-primary-dark);
+  background-image: none;
+}
+
+#rating-two[type="radio"]:checked  ~ [for="rating-one"],
+#rating-two[type="radio"]:checked  ~ [for="rating-two"] {
+  background-color: var(--color-primary-dark);
+  background-image: none;
+}
+
+#rating-three[type="radio"]:checked  ~ [for="rating-one"],
+#rating-three[type="radio"]:checked  ~ [for="rating-two"],
+#rating-three[type="radio"]:checked  ~ [for="rating-three"] {
+  background-color: var(--color-primary-dark);
+  background-image: none;
+}
+
+#rating-four[type="radio"]:checked  ~ [for="rating-one"],
+#rating-four[type="radio"]:checked  ~ [for="rating-two"],
+#rating-four[type="radio"]:checked  ~ [for="rating-three"],
+#rating-four[type="radio"]:checked  ~ [for="rating-four"] {
+  background-color: var(--color-primary-dark);
+  background-image: none;
+}
+
+#rating-five[type="radio"]:checked  ~ [for="rating-one"],
+#rating-five[type="radio"]:checked  ~ [for="rating-two"],
+#rating-five[type="radio"]:checked  ~ [for="rating-three"],
+#rating-five[type="radio"]:checked  ~ [for="rating-four"],
+#rating-five[type="radio"]:checked  ~ [for="rating-five"] {
+  background-color: var(--color-primary-dark);
+  background-image: none;
+}
+
+
+#rating-one[type="radio"]:hover ~ [for="rating-one"] {
+  background-color: var(--color-primary-dark);
+  background-image: none;
+}
+
+#rating-two[type="radio"]:hover  ~ [for="rating-one"],
+#rating-two[type="radio"]:hover  ~ [for="rating-two"] {
+  background-color: var(--color-primary-dark);
+  background-image: none;
+}
+
+#rating-three[type="radio"]:hover  ~ [for="rating-one"],
+#rating-three[type="radio"]:hover  ~ [for="rating-two"],
+#rating-three[type="radio"]:hover  ~ [for="rating-three"] {
+  background-color: var(--color-primary-dark);
+  background-image: none;
+}
+
+#rating-four[type="radio"]:hover  ~ [for="rating-one"],
+#rating-four[type="radio"]:hover  ~ [for="rating-two"],
+#rating-four[type="radio"]:hover  ~ [for="rating-three"],
+#rating-four[type="radio"]:hover  ~ [for="rating-four"] {
+  background-color: var(--color-primary-dark);
+  background-image: none;
+}
+
+#rating-five[type="radio"]:hover  ~ [for="rating-one"],
+#rating-five[type="radio"]:hover  ~ [for="rating-two"],
+#rating-five[type="radio"]:hover  ~ [for="rating-three"],
+#rating-five[type="radio"]:hover  ~ [for="rating-four"],
+#rating-five[type="radio"]:hover  ~ [for="rating-five"] {
+  background-color: var(--color-primary-dark);
+  background-image: none;
+}
+
+/* -- end ratings --*/
+
+.img-display {
+  display: none;
+}
+
+#img-shown-one ~ .img-display-main #img-shown-one,
+#img-shown-two ~ .img-display-main #img-shown-two,
+#img-shown-three ~ .img-display-main #img-shown-three {
+  display: block;
+  z-index: 1000;
+}
+
+.current-img {
+  display: block;
+}
+
+.current-img-s {
+  border-radius: 10px;
+  border: 10px solid var(--color-primary-dark);
+}
+
+.button-l {
+  left: 10px;
+  bottom: 90px;
+}
+
+.button-r {
+  right: 10px;
+  bottom: 90px;
+}
+
+
 .btn {
   display: inline-block;
   width: 4em;
@@ -94,27 +207,4 @@ dl dd {
   border-bottom: 4px solid var(--color-primary-dark);
   display: inline-block;
   line-height: 72px;
-}
-
-.rating.rating-box {
-  position: relative;
-}
-
-li.rating-box::after {
-  position: absolute;
-  content: " ";
-  bottom: 0;
-  border: 2px solid var(--color-accent);
-  border-radius: 2px;
-  width: 10px;
-  height: 10px;
-  display: inline-block;
-}
-
-li.rating-box:hover::after {
-  background-color: var(--color-primary-dark);
-}
-
-li.rated::after {
-  background-color: var(--color-primary-dark);
 }
