--- a/patterns/cards/cards.css
+++ b/patterns/cards/cards.css
@@ -33,17 +33,16 @@
 }
 
 .productcard {
-  color: var(--color-neutral-beige);
-  background-color: var(--color-primary);
+  color: var(--color-primary);
+  border: 4px solid var(--color-primary-light);
   border-radius: .5em;
-  display: block;
-  width: 25em;
+  display: inline-block;
 }
 
 .productcard:hover {
-  background-color: #f0eee8;
+  background-color: var(--color-primary);
 }
 
 h3 {
-  color: var(--color-neutral-beige);
+  color: var(--color-primary-light);
 }
