--- a/patterns/banner/banner.css
+++ b/patterns/banner/banner.css
@@ -1,56 +1,17 @@
-html {
-  line-height: 24px;
+.home-text-box-banner {
+  display: block;
+  background-color: var(--color-primary);
 }
-
-a {
-  color: var(--color-accent);
-}
-
-.main-card {
-  border: 6px solid #000;
-  border-radius: 20px;
-  margin: 1em;
-  box-shadow: 10px 10px 10px #e2e2e2;
-}
-
 .home-text-image-banner {
   background-image: url(../../images/rubik-mainbanner.jpg);
-  background-size: 100%;
+  background-size: 150%;
+  background-position: center;
   background-repeat: no-repeat;
-  height: 100vh;
+  height: 50vh;
 }
 
 .home-text-box-banner {
   bottom: 0;
-}
-
-.filter-text-image-banner {
-  background-image: url(../../images/rubik-banner.jpg);
-  background-size: 100%;
-  background-repeat: no-repeat;
-  height: 100vh;
-}
-
-.filter-text-box-banner {
-  bottom: 0;
-}
-
-p {
-  background-color: var(--color-secondary-light);
-  border-radius: 6px;
-  border: 6px solid var(--color-accent);
-}
-
-h3,
-h4,
-h5 {
-   line-height: 48px;
-}
-
-h1,
-h2 {
-  line-height: 62px;
-  text-shadow: 4px 0 0 var(--color-secondary-light), -4px 0 0 var(--color-secondary-light), 0 4px 0 var(--color-secondary-light), 0 -4px 0 var(--color-secondary-light);
 }
 
 .separator {
@@ -74,4 +35,38 @@ dl dd {
   border-bottom: 4px solid var(--color-primary-dark);
   display: inline-block;
   line-height: 62px;
+}
+
+@media only screen and (min-width: 60em) {
+
+  .banner {
+    position: relative;
+  }
+
+  .home-text-box-banner {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 20em;
+    background-color: transparent;
+  }
+
+  .banner-h1 {
+    color: var(--color-accent);
+    text-shadow: 4px 0 0 var(--color-secondary-light), -4px 0 0 var(--color-secondary-light), 0 4px 0 var(--color-secondary-light), 0 -4px 0 var(--color-secondary-light);
+  }
+
+  .banner-p {
+    background-color: var(--color-secondary-light);
+    border-radius: 6px;
+    border: 6px solid var(--color-accent);
+    padding: 1em;
+  }
+
+  .home-text-image-banner {
+    background-image: url(../../images/rubik-mainbanner.jpg);
+    background-size: 130%;
+    height: 100vh;
+    background-position: center;
+  }
 }
