--- a/patterns/card/cards.css
+++ b/patterns/card/cards.css
@@ -2,15 +2,20 @@ html {
   line-height: 24px;
 }
 
-a {
-  color: var(--color-accent);
-}
-
-.main-card {
-  border: 6px solid #000;
+.main-card,
+.basic-card {
+  border: 6px solid var(--color-neutral);
   border-radius: 20px;
   margin: 1em;
-  box-shadow: 10px 10px 10px #e2e2e2;
+}
+
+.basic-card:hover {
+  border: 6px solid var(--color-accent);
+  box-shadow: 3px 3px 30px var(--color-whatever);
+}
+
+.basic-card-link p {
+  color: var(--color-accent);
 }
 
 /* -- ratings -- */
@@ -116,74 +121,17 @@ input[type="radio"] ~ label {
 }
 
 .button-l {
-  left: 10px;
+  left: -5px;
   bottom: 90px;
 }
 
 .button-r {
-  right: 10px;
+  right: -5px;
   bottom: 90px;
 }
 
-
-.btn {
-  display: inline-block;
-  width: 4em;
-  height: 4em;
-  justify-content: center;
-  align-items: center;
+.info-card-title {
   color: var(--color-accent);
-  border-radius: 10px;
-  border: 6px solid var(--color-accent);
-}
-
-.btn-cart {
-  background-color: var(--color-primary);
-}
-
-.btn-more {
-  background-color: var(--color-primary-light);
-}
-
-.btn-drop {
-  background-color: var(--color-primary-dark);
-}
-
-.btn-cart:hover {
-  background-color: var(--color-secondary);
-  color: var(--color-accent);
-}
-
-.btn-more:hover {
-  background-color: var(--color-secondary-light);
-  color: var(--color-accent);
-
-}
-
-.btn-drop:hover {
-  background-color: var(--color-secondary-dark);
-  color: var(--color-accent);
-
-}
-
-.banner {
-  height: 100vh;
-}
-
-p {
-  text-shadow: 1px 1px 15px var(--color-secondary-light);
-}
-
-h3,
-h4,
-h5 {
-   line-height: 48px;
-}
-
-h1,
-h2 {
-  line-height: 72px;
-  text-shadow: 1px 1px 1px var(--color-neutral);
 }
 
 .separator {
