--- a/patterns/header/headers.css
+++ b/patterns/header/headers.css
@@ -1,16 +1,15 @@
-.rubikas-logo-text {
-  padding-left: 1em;
-}
-
 .nav-bar {
   background-color: var(--color-neutral);
   height: 4em;
   position: relative;
+  z-index: 300;
 }
 
 #nav-items {
-  background-color: var(--color-neutral);
+  background-color: var(--color-secondary-light);
   padding-top: 3em;
+  border: 4px solid var(--color-accent);
+  border-radius: 10px;
 }
 
 .nav-section {
@@ -56,11 +55,11 @@ li.current:hover::after {
 
 .toggle-clicked {
   display: none;
-  z-index: 200;
+  z-index: 400;
 }
 
 #nav-check {
-  left: 0;
+  left: -6em;
   height: 100%;
   position: absolute;
   bottom: -168px;
@@ -69,6 +68,7 @@ li.current:hover::after {
 #nav-check:checked ~ .nav-bar-toggle {
   display: block;
   left: 0;
+  bottom: -50px;
   height: 100%;
 }
 
@@ -82,12 +82,22 @@ li.current:hover::after {
 
 @media only screen and (min-width: 45em) {
 
-  .nav-bar-toggle {
-    display: block;
+  .nav-bar {
+    background-color: var(--color-neutral);
+    height: 4em;
+    position: relative;
+    z-index: 300;
   }
 
   #nav-items {
+    background-color: var(--color-neutral);
     padding-top: 0;
+    border: none;
+    border-radius: 0;
+  }
+
+  .nav-bar-toggle {
+    display: block;
   }
 
   #nav-items li {
