--- a/patterns/navigation/navigation.css
+++ b/patterns/navigation/navigation.css
@@ -12,9 +12,12 @@
   color: var(--color-secondary-light);
 }
 
-.current {
+.current-page {
   background-color: var(--color-secondary-dark);
   color: var(--color-primary-dark);
+  border: 4px solid var(--color-accent);
+  border-radius: 8px;
+
 }
 .page-nav-bar {
   background-color: var(--color-primary-dark);
@@ -28,17 +31,9 @@
   padding: 0;
 }
 
-h2 {
-  line-height: 48px;
-}
 .cart-btn {
   width: 32px;
   height: 32px;
-}
-
-.current {
-  border: 4px solid var(--color-accent);
-  border-radius: 8px;
 }
 
 .sections {
@@ -92,7 +87,7 @@ h2 {
   display: none;
 }
 
-@media only screen and (min-width: 60em){
+@media only screen and (min-width: 80em){
 
   .accesibility-illustration {
     display: block;
