--- a/patterns/footer/footer.css
+++ b/patterns/footer/footer.css
@@ -1,9 +1,15 @@
-.footer {
+html {
+  font-family: sans-serif;
+}
+
+a svg:hover {
+  background-color: #fff;
+}
+
+.copyright {
   display: block;
-  background-color: #f9f9f9;
-  color: var(--color-primary-light);
-  padding-top: 1em;
-  padding-bottom: 1em;
-  padding-left: 28em;
-  text-align: right;
+}
+
+section-icon {
+  display: inline-block;
 }
