--- a/common/theme.css
+++ b/common/theme.css
@@ -80,3 +80,18 @@ mark {
   background-color: var(--color-primary-dark);
   color: #fff;
 }
+
+/* other css */
+
+.cart-section {
+  background-color: var(--color-primary-light);
+}
+
+.cart-checkout {
+  background-color: var(--color-secondary-dark);
+}
+
+.cart-checkout-text {
+  border-bottom: 4px solid var(--color-accent);
+
+}
