--- a/patterns/banner/banner.css
+++ b/patterns/banner/banner.css
@@ -6,6 +6,7 @@
   background-size: cover;
   background-position: top center;
   background-repeat: no-repeat;
+  background-attachment: fixed;
   bottom: 0;
 }
 
@@ -15,10 +16,6 @@
 
 .banner-img-2 {
   background-image: url(../../images/rubik-banner.jpg);
-}
-
-.banner-img-3 {
-  background-image: url(../../images/rubik-banner-filter.jpg);
 }
 
 .separator {
