--- a/patterns/card/cards.css
+++ b/patterns/card/cards.css
@@ -7,11 +7,13 @@ html {
   border: 6px solid var(--color-neutral);
   border-radius: 20px;
   margin: 1em;
+  background-color: var(--color-secondary-light);
 }
 
 .basic-card:hover {
   border: 6px solid var(--color-accent);
   box-shadow: 3px 3px 30px var(--color-whatever);
+  background-color: var(--color-secondary-light);
 }
 
 .basic-card-link p {
@@ -19,7 +21,7 @@ html {
 }
 
 /* -- ratings -- */
-input[type="radio"] ~ label {
+.cards input[type="radio"] ~ label {
     display:inline-block;
     width: 12px;
     height: 12px;
