--- a/patterns/filters/filter.css
+++ b/patterns/filters/filter.css
@@ -38,6 +38,22 @@
   color: var(--color-secondary-light);
 }
 
+.filter-section {
+  border: 6px solid var(--color-accent);
+  border-radius: 20px;
+  background-color: var(--color-secondary-light);
+}
+
+.filter-section-title {
+  background: var(--color-secondary-dark);
+  border-radius: 10px 10px 0 0;
+}
+
+.filter-section-title-straight {
+  background: var(--color-secondary-dark);
+}
+
+
 
 @media only screen and (min-width: 42em) {
 
