--- a/patterns/header/headers.css
+++ b/patterns/header/headers.css
@@ -10,6 +10,8 @@
   padding-top: 3em;
   border: 4px solid var(--color-accent);
   border-radius: 10px;
+  margin-left: 3em;
+  margin-right: 3em;
 }
 
 .nav-section {
@@ -29,8 +31,15 @@
   margin-bottom: .5em;
 }
 
+
+li.hover-nav {
+  border-bottom: 4px solid transparent;
+}
+
+
 li.current {
   position: relative;
+  border-bottom: 4px solid var(--color-secondary-dark);
 }
 
 li.current::after {
@@ -94,6 +103,7 @@ li.current:hover::after {
     padding-top: 0;
     border: none;
     border-radius: 0;
+    margin: 0;
   }
 
   .nav-bar-toggle {
