--- a/patterns/navigation/navigation.css
+++ b/patterns/navigation/navigation.css
@@ -69,13 +69,17 @@
   background-color: var(--color-primary-dark);
 }
 
-.filter-section-title {
-  background: var(--color-secondary-dark);
-  border-radius: 10px 10px 0 0;
+.i-sizing-accessibility {
+  width: 360px;
+  height: 630px;
+  top: -2em;
 }
 
-.accesibility-notice,
-.filter-section {
+.notice-wrapper {
+  max-width: 36em;
+}
+
+.accesibility-notice {
   border: 6px solid var(--color-accent);
   border-radius: 20px;
   background-color: var(--color-secondary-light);
@@ -91,7 +95,7 @@
 
   .accesibility-illustration {
     display: block;
-    top: 5em;
+    top: 6em;
     right: -7em;
   }
 
