--- a/patterns/forms/forms.css
+++ b/patterns/forms/forms.css
@@ -6,3 +6,35 @@
   padding-top: 1em;
   border-radius: 1em;
 }
+
+fieldset {
+  padding: 0;
+}
+
+h1 {
+  border-bottom: 1px solid #000;
+}
+
+legend {
+  padding-right: 1rem;
+  display: block;
+}
+
+body {
+  background-color: #f2f2f2;
+}
+
+section {
+  background-color: #fff;
+}
+
+@media only screen and (min-width: 60em) {
+
+  .space-right {
+    padding-right: .5rem;
+  }
+
+  .space-left {
+    padding-left: .5rem;
+  }
+}
