Add all content of Check out page

--- a/patterns/forms/forms.css
+++ b/patterns/forms/forms.css
@@ -68,6 +68,11 @@ textarea {
   left: 1.75em;
 }
 
+.table-body tr th {
+  font-weight: normal;
+}
+
+
 
 @media only screen and (min-width: 38em) {
 
