--- a/patterns/header/headers.css
+++ b/patterns/header/headers.css
@@ -1,8 +1,12 @@
 .nav-bar {
   background-color: var(--color-neutral);
-  height: 4em;
+  height: 3em;
   position: relative;
   z-index: 300;
+}
+
+.rubikas-logo-text {
+  color: var(--color-accent);
 }
 
 #nav-items {
@@ -77,7 +81,6 @@ li.current:hover::after {
 #nav-check:checked ~ .nav-bar-toggle {
   display: block;
   left: 0;
-  bottom: -50px;
   height: 100%;
 }
 
