--- a/common/theme.css
+++ b/common/theme.css
@@ -27,22 +27,22 @@ h2 {
 }
 
 h3 {
-  font-size: 3em;
+  font-size: 2em;
   font-weight: normal;
   line-height: 1em;
 }
 
 h4 {
-  font-size: 2.5em;
+  font-size: 1.5em;
 }
 
 h5 {
-  font-size: 2em;
+  font-size: 1em;
   font-weight: normal;
 }
 
 h6 {
-  font-size: 1.5em;
+  font-size: .725em;
 }
 
 a {
@@ -93,5 +93,4 @@ mark {
 
 .cart-checkout-text {
   border-bottom: 4px solid var(--color-accent);
-
 }
