--- a/patterns/buttons/buttons.css
+++ b/patterns/buttons/buttons.css
@@ -166,18 +166,28 @@
 }
 
 .btn-filter span::before {
-  background-color: var(--color-primary-dark);
+  background-color: var(--color-secondary-light);
+  color: var(--color-accent);
 }
 
 .btn-filter span::after {
-  background-color: var(--color-secondary-dark);
+  background-color: var(--color-primary-light);
+  color: var(--color-accent);
+}
+
+.btn-drop span i {
+  background-color: var(--color-secondary-light);
+}
+
+.btn-submit span i {
+  background-color: var(--color-primary);
+
 }
 
 .btn-drop span i,
 .btn-filter span i {
   top: 2px;
   transform: rotateX(90deg) translate3d(0, 0, 2.5em);
-  background-color: var(--color-secondary-light);
 }
 
 .btn-drop:hover span,
@@ -190,4 +200,14 @@ button:hover {
   background-color: transparent;
   border: none;
   padding: 0;
+}
+
+.btn-submit span::before {
+  background-color: var(--color-primary-light);
+  color: var(--color-accent);
+}
+
+.btn-submit span::after {
+  background-color: var(--color-secondary-light);
+ color: var(--color-accent);
 }
