--- a/patterns/banner/banner.css
+++ b/patterns/banner/banner.css
@@ -74,6 +74,18 @@ dl dd {
     display: block;
   }
 
+  .home-text-image-banner {
+    padding-top: 90%;
+  }
+
+}
+
+@media only screen and (min-width: 30em) {
+
+  .home-text-image-banner {
+    padding-top: 85%;
+  }
+
 }
 
 @media only screen and (min-width: 36em) {
@@ -82,12 +94,18 @@ dl dd {
   }
 
   .home-text-image-banner {
-    padding-top: 68%;
+    padding-top: 65%;
+  }
+}
+
+@media only screen and (min-width: 60em) {
+  .home-text-image-banner {
+    padding-top: 40%;
   }
 }
 
 @media only screen and (min-width: 90em) {
   .home-text-image-banner {
-    padding-top: 38%;
+    padding-top: 24%;
   }
 }
