Fix image sizing

--- a/patterns/filters/filter.css
+++ b/patterns/filters/filter.css
@@ -14,6 +14,11 @@
   display: none;
 }
 
+.popular-sell {
+  height: 20em;
+  overflow-y: scroll;
+}
+
 #list-check:checked ~ .list-selection .list-view-selected {
   display: block;
 }
