Fix code issues with Markbot

--- a/patterns/filters/filter.css
+++ b/patterns/filters/filter.css
@@ -10,11 +10,12 @@
 .search-bar-field {
   width: 100%;
 }
+
 .list-view-selected {
   display: none;
 }
 
-.popular-sell {
+.popular-sell-scroll {
   height: 20em;
   overflow-y: scroll;
 }
@@ -23,7 +24,7 @@
   display: block;
 }
 
-#list-check:checked ~ .list-selection .list-view  {
+#list-check:checked ~ .list-selection .list-view {
   display: none;
 }
 
@@ -35,7 +36,7 @@
   display: block;
 }
 
-#grid-check:checked ~ .grid-selection .grid-view  {
+#grid-check:checked ~ .grid-selection .grid-view {
   display: none;
 }
 
@@ -59,7 +60,6 @@
 }
 
 @media only screen and (min-width: 42em) {
-
 
   .view-as {
     margin-left: auto;
