--- a/patterns/banner/banner.css
+++ b/patterns/banner/banner.css
@@ -1,7 +1,3 @@
-.banner-p {
-  display: none;
-}
-
 .home-text-image-banner {
   background-size: cover;
   background-position: top center;
@@ -12,11 +8,11 @@
 }
 
 .banner-img-1 {
-  background-image: url(../../images/rubik-mainbanner.jpg);
+  background-image: url("../../images/rubik-mainbanner.jpg");
 }
 
 .banner-img-2 {
-  background-image: url(../../images/rubik-banner.jpg);
+  background-image: url("../../images/rubik-banner.jpg");
 }
 
 .separator {
@@ -42,10 +38,9 @@ dl dd {
   line-height: 62px;
 }
 
-  .banner {
+.banner {
   position: relative;
   text-shadow: 2px 0 0 var(--color-secondary-light), -2px 0 0 var(--color-secondary-light), 0 2px 0 var(--color-secondary-light), 0 -2px 0 var(--color-secondary-light);
-
 }
 
 .home-text-box-banner {
@@ -66,6 +61,7 @@ dl dd {
   border-radius: 6px;
   border: 6px solid var(--color-accent);
   padding: 1em;
+  display: none;
 }
 
 @media only screen and (min-width: 25em) {
@@ -89,6 +85,7 @@ dl dd {
 }
 
 @media only screen and (min-width: 36em) {
+
   .banner-h1 {
     text-shadow: 4px 0 0 var(--color-secondary-light), -4px 0 0 var(--color-secondary-light), 0 4px 0 var(--color-secondary-light), 0 -4px 0 var(--color-secondary-light);
   }
@@ -96,16 +93,21 @@ dl dd {
   .home-text-image-banner {
     padding-top: 65%;
   }
+
 }
 
 @media only screen and (min-width: 60em) {
+
   .home-text-image-banner {
     padding-top: 40%;
   }
+
 }
 
 @media only screen and (min-width: 90em) {
+
   .home-text-image-banner {
     padding-top: 24%;
   }
+
 }
