--- a/css/theme.css
+++ b/css/theme.css
@@ -6,7 +6,7 @@
   --color-neutral-beige: #e2e2e2;
   --color-whatever: peachpuff;
 
-  --font-primary: "Alegreya Sans", "Trebuchet MS", Arial, sans-serif;
+  --font-primary: "Lato", "Aleo", Arial, sans-serif;
   --font-secondary: "Source Code Pro", Menlo, Consolas, monospace;
 }
 
