Add all the things

--- a/css/theme.css
+++ b/css/theme.css
@@ -1,14 +1,20 @@
 :root {
   --color-primary: #292929;
-  --color-primary-light: #292929;
-  --color-secondary: #fff;
-  --color-accent: #898989;
-  --color-neutral-beige: #e2e2e2;
-  --color-whatever: hotpink;
-  --font-primary: urbane-rounded, sans-serif;
-  --font-secondary: century-gothic, sans-serif;
+  --color-primary-light: #fff;
+  --color-secondary: #898989;
+  --color-blue: #007AFF;
+  --color-light-gray: #e2e2e2;
+  --color-hot-pink: hotpink;
+  --font-primary: century-gothic, sans-serif;
+  --font-secondary: urbane-rounded, sans-serif;
 }
 
 html {
   font-family: var(--font-primary);
 }
+
+{% include_relative modules.css %}
+{% include_relative grid.css %}
+{% include_relative type.css %}
+{% include_relative theme.css %}
+{{pattern_css}}
