--- a/css/theme.css
+++ b/css/theme.css
@@ -1,7 +1,7 @@
 :root {
   --color-primary: #292929;
-  --color-primary-light: #fff;
-  --color-secondary: #898989;
+  --color-primary-light: #898989;
+  --color-secondary: #fff;
   --color-blue: #007AFF;
   --color-light-gray: #e2e2e2;
   --color-hot-pink: hotpink;
@@ -18,3 +18,29 @@ html {
 {% include_relative type.css %}
 {% include_relative theme.css %}
 {{pattern_css}}
+
+h1 {
+  font-family: var(--font-secondary);
+  font-color: var(--color-primary);
+}
+
+h2 {
+  font-family: var(--font-secondary);
+  font-color: var(--color-primary-light);
+}
+
+h3 {
+  font-family: var(--font-primary);
+  font-color: var(--color-primary);
+}
+
+h4 {
+  font-family: var(--font-primary);
+  font-color: var(--color-primary);
+}
+
+p {
+  font-family: var(--font-primary);
+  font-style: italic;
+  font-color: var(--color-secondary);
+}
